# fenbux

./: .gitignore  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md  sitemap.xml  test.ipynb
.github/workflow/: python-package.yml
.github/workflows/: python-package.yml  run_tests.yml
Bijectors/: index.html
Evaluations/: index.html
Statistics/: index.html
Statitics/: index.html
Transformations/: index.html
basic_functions/: index.html
batch_with_vmap/: index.html
distribution_attributes/: index.html
distribution_functions/: index.html
distribution_transforms/: index.html
distributions/multivariate/: index.html
distributions/univariate/: index.html
docs/: Bijectors.md  Evaluations.md  Statistics.md  Transformations.md  basic_functions.md  batch_with_vmap.md  distribution_attributes.md  distribution_transforms.md  index.md  random_sample.md  scipy_with_pytree.md
docs/bijectors/: Exp_Log.md  chain.md  leaky_relu.md  logit.md  reshape.md  scale.md  shift.md
docs/distributions/: multivariate.md  univariate.md
fenbux/: __init__.py  config.py  random_utils.py  tree_utils.py  typing.py
fenbux/base/: __init__.py  _dist.py  _func.py  _types.py
fenbux/bijector/: __init__.py  _abstract_impls.py  _base.py  _chain.py  _exp_log.py  _identity.py  _inverse.py  _leaky_relu.py  _logit.py  (+7 more)
random_sample/: index.html
scipy_with_pytree/: index.html
tests/: __main__.py  conftest.py  helpers.py  requirements.txt  test_dist.py  test_func.py  test_jax_transform_compat.py  test_primitives.py  test_scipy_stats.py  test_tree_utils.py
(+155 files in other folders)
